--- a/views/todo.ejs
+++ b/views/todo.ejs
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="/assets/styles.css" type="text/css">
 </head>
 <body>
-    <h1>My ToDo List</h1>
+    <h1>MY TODO WEB APP</h1>
     <div id="todo-table">
         <form method="POST">
             <input type="text" name="item" placeholder="Add New Item ...." required/>
