--- a/public/assets/styles.css
+++ b/public/assets/styles.css
@@ -32,7 +32,7 @@ input[type="text"]{
 
 button{
     padding: 20px;
-    width: 20%;
+    width: 30%;
     float: left;
     background: #23282e;
     border: 0;
@@ -64,7 +64,6 @@ li:hover{
 }
 
 h1{
-    background: url(/assets/logo.png) no-repeat center;
     margin-bottom: 0;
-    text-indent: -10000px;
+    text-align:center;
 }
